--- a/kibana/Chart.yaml
+++ b/kibana/Chart.yaml
@@ -1,12 +1,11 @@
 apiVersion: v1
-description: Official Elastic helm chart for Kibana
-home: https://github.com/elastic/helm-charts
+description: Custom Elastic helm chart for Kibana
+home: https://github.com/ealain/helm-charts
 maintainers:
-- email: helm-charts@elastic.co
-  name: Elastic
+- name: ealain
 name: kibana
-version: 7.13.1
-appVersion: 7.13.1
+version: 7.13.1-2
+appVersion: 7.13.1-2
 sources:
-  - https://github.com/elastic/kibana
+  - https://github.com/ealain/kibana
 icon: https://helm.elastic.co/icons/kibana.png
