--- a/kibana/templates/deployment.yaml
+++ b/kibana/templates/deployment.yaml
@@ -106,6 +106,7 @@ spec:
 {{- end }}
         readinessProbe:
 {{ toYaml .Values.readinessProbe | indent 10 }}
+{{- if not (or (or .Values.readinessProbe.exec .Values.readinessProbe.tcpSocket) .Values.readinessProbe.httpGet)}}
           exec:
             command:
               - sh
@@ -135,6 +136,7 @@ spec:
                 }
 
                 http "{{ .Values.healthCheckPath }}"
+{{- end }}
         ports:
         - containerPort: {{ .Values.httpPort }}
 {{- if .Values.lifecycle }}
