--- a/kibana/templates/deployment.yaml
+++ b/kibana/templates/deployment.yaml
@@ -104,7 +104,9 @@ spec:
 {{ toYaml .Values.envFrom | indent 10 }}
 {{- end }}
         readinessProbe:
+{{- if .Values.readinessProbe }}
 {{ toYaml .Values.readinessProbe | indent 10 }}
+{{- else }}
           exec:
             command:
               - sh
@@ -134,6 +136,7 @@ spec:
                 }
 
                 http "{{ .Values.healthCheckPath }}"
+{{- end }}
         ports:
         - containerPort: {{ .Values.httpPort }}
 {{- if .Values.lifecycle }}
